# postgres-elasticsearch-fdw

./: .gitignore  .pylintrc  .travis.yml  Dockerfile  LICENSE  Makefile  Pipfile  README  README.md  README.rst  TODO.markdown  demo.sh  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
dite/: __init__.py
docker/: Dockerfile  docker-compose.yml
docker/9.5/: docker-compose.yml
pg_es/: __init__.py
pg_es_fdw/: __init__.py  columns.py  fdw.py  options.py
sql/: create-triggered-table.sql  example-with-query.sql  example.sql
tests/: lib.sh  load.py  requirements.txt  run.py  set-up.py  set-up.sh  start.py  stop.py  tear-down.py  tear-down.sh  test.py  test.sh
tests/data/: data.json  data.sql  nested-data-8.json  nested-data.json  nested-schema.sql  no-type-data.json  schema-5.sql  schema-6.sql  schema-7.sql  schema-8.sql  schema.sql
tests/docker/: docker-compose.yml
tests/docker/10/: Dockerfile  docker-compose.yml
tests/docker/11/: Dockerfile  docker-compose.yml
tests/docker/9.2/: Dockerfile  docker-compose.yml
tests/docker/9.3/: Dockerfile  docker-compose.yml
tests/docker/9.4/: Dockerfile  docker-compose.yml
tests/docker/9.5/: Dockerfile  docker-compose.yml
tests/docker/9.6/: Dockerfile  docker-compose.yml
tests/docker/es-5/: docker-compose.yml
tests/docker/es-6/: docker-compose.yml
tests/docker/es-6-auth/: docker-compose.yml
tests/docker/es-6-pip/: docker-compose.yml
tests/docker/es-7/: docker-compose.yml
tests/docker/es-7-auth/: docker-compose.yml
tests/docker/es-7-pip/: docker-compose.yml
tests/docker/es-8/: docker-compose.yml
tests/docker/es-8-pip/: docker-compose.yml
tests/docker/pg-10/: Dockerfile  docker-compose.yml
tests/docker/pg-11/: Dockerfile  docker-compose.yml
tests/docker/pg-12/: Dockerfile  docker-compose.yml
tests/docker/pg-13/: Dockerfile  docker-compose.yml
tests/docker/pg-14/: Dockerfile  docker-compose.yml
tests/docker/pg-15/: Dockerfile  docker-compose.yml
tests/docker/pg-9.4/: Dockerfile  docker-compose.yml
tests/docker/pg-9.5/: Dockerfile  docker-compose.yml
tests/docker/pg-9.6/: Dockerfile  docker-compose.yml
tests/lib/: __init__.py  docker_compose_tools.py  docker_tools.py  es_tools.py  load_fixtures.py  pg_tools.py  set_up.py  tear_down.py  test.py  tools.py
tests/sql/: schema.sql
tests/test/: delete-return-row.sql  insert-chinese.sql  insert-return-id.sql  insert-return-row.sql  insert-wait_for.sql  json-query-8.sql  json-query.sql  nested-read.sql  query.sql  read.sql  sorted-read.sql
