[tool.poetry]
name = "pg-es-fdw"
version = "0.11.2"
description = "Connect PostgreSQL and Elastic Search with this Foreign Data Wrapper"
authors = ["Matthew Franglen <matthew@franglen.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/matthewfranglen/postgres-elasticsearch-fdw"
repository = "https://github.com/matthewfranglen/postgres-elasticsearch-fdw"
keywords = ["postgresql", "postgres", "elasticsearch", "es", "fdw"]

[tool.poetry.urls]
download ="https://github.com/matthewfranglen/postgres-elasticsearch-fdw/archive/0.11.2.zip"

[tool.poetry.dependencies]
python = ">=3"
elasticsearch = { version = ">=7,<8", python = ">=3.6, <4" }
elasticsearch8 = { version = ">=8", python = ">=3.6, <4" }
elasticsearch7 = { version = ">=7,<8", python = ">=3.6, <4" }
elasticsearch6 = { version = ">=6,<7", python = ">=3.6, <4" }

[tool.poetry.dev-dependencies]
elasticsearch = { version = ">=7,<8", python = ">=3.6, <4" }
elasticsearch8 = { version = ">=8", python = ">=3.6, <4" }
elasticsearch7 = { version = ">=7,<8", python = ">=3.6, <4" }
elasticsearch6 = { version = ">=6,<7", python = ">=3.6, <4" }
black = { version = "^22.8.0", python = ">=3.6.2" }
pylint = { version = "^2.15.2", python = ">=3.7.2, <4" }
pytest = { version = "^7.1.3", python = ">=3.7" }
sh = "^1.14.3"
psycopg2 = { version = "^2.9.3", python = ">=3.6" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
