[tool.poetry]
name = "pg-es-fdw"
version = "0.11.3"
description = "Connect PostgreSQL and Elastic Search with this Foreign Data Wrapper"
authors = ["Matthew Franglen <matthew@franglen.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/matthewfranglen/postgres-elasticsearch-fdw"
repository = "https://github.com/matthewfranglen/postgres-elasticsearch-fdw"
keywords = ["postgresql", "postgres", "elasticsearch", "es", "fdw"]

[tool.poetry.urls]
download ="https://github.com/matthewfranglen/postgres-elasticsearch-fdw/archive/0.11.2.zip"

[tool.poetry.dependencies]

[tool.poetry.dev-dependencies]
elasticsearch = { version = ">=7,<8", python = ">=3.6, <4" }
black = { version = "^24.4.2", python = ">=3.8" }
pylint = { version = "^3.1.0", python = ">=3.8, <4" }
pytest = { version = "^8.2.0", python = ">=3.8" }
sh = { version = "^2.0.6", python = ">=3.8.1, <4" }
psycopg2-binary = { version = "^2.9.9", python = ">=3.7" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
